Allow long body-links to wrap. Fixes chapter 5 on mobile.

--- a/css/global.css
+++ b/css/global.css
@@ -185,6 +185,10 @@ a.body-link, .self {
     white-space: nowrap;
 }
 
+a.body-link.long {
+    white-space: initial;
+}
+
 .fixme {
     color: red;
 }
